<resources>
    <string name="app_name">sporingsapp</string>
    <string name="title_search">Spor</string>
    <string name="title_contact">Kontakt</string>
    <string name="txt_address">Adresse:</string>
    <string name="txt_phone">Telefon:</string>
    <string name="txt_address_info">Myrabakken6\n6460 Eidsvåg</string>
    <string name="txt_phone_info">+47 455 01 337 </string>
    <string name="title_trace">Your parcel</string>
    <string name="txt_parcel_location">Location:</string>
    <string name="txt_parcel_location_info">default_location</string>
    <string name="txt_parcel_delivery">Expected delivery time:</string>
    <string name="txt_parcel_time_info">default_time</string>

    <string name="title_activity_map">MapActivity</string>
</resources>
