<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="solutions.bugge.sporingsapp.TraceActivity">

    <WebView
        android:id="@+id/webParcelLocationView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTrace"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_trace"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLocationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_parcel_location"
        app:layout_constraintBottom_toTopOf="@+id/txtDeliveryView"
        app:layout_constraintEnd_toStartOf="@+id/titleTrace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTrace" />

    <TextView
        android:id="@+id/txtDeliveryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_parcel_delivery"
        app:layout_constraintBottom_toTopOf="@+id/webParcelLocationView"
        app:layout_constraintEnd_toStartOf="@+id/titleTrace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTrace" />

    <TextView
        android:id="@+id/txtLocationInfoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_parcel_location_info"
        app:layout_constraintBottom_toTopOf="@+id/txtDeliveryInforView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleTrace"
        app:layout_constraintTop_toBottomOf="@+id/titleTrace" />

    <TextView
        android:id="@+id/txtDeliveryInforView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_parcel_time_info"
        app:layout_constraintBottom_toTopOf="@+id/webParcelLocationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titleTrace"
        app:layout_constraintTop_toBottomOf="@+id/titleTrace" />
</android.support.constraint.ConstraintLayout>
